# react-swc-suspense-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: pr.yml
src/: context.tsx  helpers.rs  index.tsx  internal.tsx  lib.rs  settings.rs
tests/: basic-integration.test.tsx  package.json  vitest.config.ts
tests/__swc_snapshots__/src/lib.rs/: aliased_suspense_transform.js  basic_suspense_transform.js  custom_error_boundary_transform.js  mixed_suspense_selective_transform.js  multiple_custom_boundaries_transform.js  multiple_suspense_transform.js  no_suspense_no_change.js  test_no_transform.js  user_defined_suspense_no_transform.js
