[package]
name = "react-swc-suspense-tracker"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This profile typically results in small binary size with acceptable impact on
# performance, but there may well be further optimizations to be had.
strip = "debuginfo"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
serde = "1.0.173"
serde_json = "1.0.103"
swc_core = { version = "45.0.2", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_core = { version = "45.0.2", features = [
  "ecma_visit",
  "testing",
  "__parser"
] }